--- a/music.org
+++ b/music.org
@@ -15,10 +15,9 @@ Most of my [[https://www.youtube.com/channel/UC-yn6Cb9c9Q4XFWt3qixJcA][hobby mus
 
 My live setup is:
 
-- [[https://www.gibson.com/Guitar/USAYNB363/Les-Paul-Studio][2014 LP Studio guitar]]
-- [[https://www.fractalaudio.com/ax8-amp-modeler-multi-effects][Fractal Audio AX8]] as amp modeler and effects
-  - I run [[https://www.fractalaudio.com/ax8-edit][AX-8 Edit]] on Linux using [[https://www.winehq.org][WINE]]
-- [[https://missionengineering.com/shop-2/products/expression/multi-use-exp/sp-1/][Mission Engineering SP-1]] expression pedal
-- [[http://www.xviveaudio.com/u2-p0056.html][Xvive]] guitar wireless system
+- +[[https://www.gibson.com/Guitar/USAYNB363/Les-Paul-Studio][2014 LP Studio guitar]]+ [[https://www.fender.com/en-US/electric-guitars/telecaster/american-performer-telecaster/0115110342.html][Fender American Performer Telecaster]]
+- +[[https://www.fractalaudio.com/ax8-amp-modeler-multi-effects][Fractal Audio AX8]]+ [[https://line6.com/hx-stomp-xl/][HX Stomp XL]] as amp modeler and effects
+- +[[https://missionengineering.com/shop-2/products/expression/multi-use-exp/sp-1/][Mission Engineering SP-1]] expression pedal+
+- +[[http://www.xviveaudio.com/u2-p0056.html][Xvive]] guitar wireless system+
 - [[https://www.shure.com/products/earphones/se215cl][Shure SE-215CL]] in-ear monitors
 - [[https://www.thomann.de/de/the_t.bone_iem_75.htm][t.bone IEM 75]] wireless solution
