--- a/index.org
+++ b/index.org
@@ -7,16 +7,16 @@
   :HTML_CONTAINER_CLASS: post-list
   :END:
 
-- <2016-02-27 Sat> I wrote a [[https://github.com/dmacvicar/terraform-provider-libvirt][libvirt provider]] for [[https://terraform.io][Terraform]]. It became my 2nd most popular open-source project, with > 1.6k Github stars and used by many companies world-wide.
-- <2016-01-08 Fri> As part of my work, I had the chance to start contributing to [[https://github.com/saltstack/salt][Salt]]. My teams were the largest contributors outside Saltstack.
+- <2016-02-27 Sat> I wrote a [[https://github.com/dmacvicar/terraform-provider-libvirt][libvirt provider]] for [[https://terraform.io][Terraform]]. It became my 2nd most popular open-source project, with > 1.6k Github stars, 40M downloads, and used by many companies world-wide.
+- <2016-01-08 Fri> As part of my work, I had the chance to start contributing to [[https://github.com/saltstack/salt][Salt]]. My teams were the largest contributors outside SaltStack.
 - <2015-05-21 Thu> I wrote a [[https://github.com/dmacvicar/gorgojo][library to access bugzilla]] in Go
 - <2015-04-24 Fri> For learning purposes, I wrote a [[https://github.com/dmacvicar/garita][simple Docker v2 registry auth server in Go]]
 - <2015-04-24 Fri> I wrote a kind-of-working [[https://github.com/dmacvicar/qemacs][Qt backend]] for the qemacs editor.
 - <2014-02-28> As part of my work at SUSE, I had the chance to send my first contributions to [[https://github.com/spacewalkproject/spacewalk][Spacewalk]]. My teams were the largest contributors after Redhat.
 - <2013-12-06 Fri> I use a emacs/tmux setup. Here are my [[https://github.com/dmacvicar/dotfiles][dotfiles]].
-- <2011-10-15 Sat> I implemented a pure FFI [[https://github.com/dmacvicar/ruby-rpm-ffi][version of Ruby bindings for the rpm package manager.]]
+- <2011-10-15 Sat> I implemented a pure FFI [[https://github.com/dmacvicar/ruby-rpm-ffi][version of Ruby bindings for the rpm package manager]]. It is used by products like [[https://www.manageiq.org/][ManageIQ]].
 - <2011-08-06 Sat> I wrote a [[https://github.com/dmacvicar/bicho][library to access bugzilla]] from Ruby
-- <2011-02-17 Thu> I created a [[https://github.com/dmacvicar/mirall][desktop applet to sync folders]] using csync. Not longer maintained, but it was adopted as the base for the [[https://github.com/owncloud/client][Owncloud desktop client]] (later [[https://nextcloud.com/][Nextcloud]]).
+- <2011-02-17 Thu> I created a [[https://github.com/dmacvicar/mirall][desktop applet to sync folders]] using csync. Not longer maintained, but it was adopted as the base for the [[https://github.com/owncloud/client][Owncloud desktop client]] (later forked by [[https://nextcloud.com/][Nextcloud]] and [[https://opencloud.eu][OpenCloud]] too).
 - <2009-12-20 Sun> [[https://github.com/dmacvicar/ruby-sfcc][A WBEM (CIM) client in Ruby]], implemented using the sfcc library from IBM.
 - <2009-05-20 Wed> I implemented a [[https://github.com/dmacvicar/kopete-facebook][Kopete protocol plugin for Facebook chat]].
 - <2001-12-26 Wed> I started a multi-protocol [[https://en.wikipedia.org/wiki/Kopete][chat client for KDE]] and it became the 2nd most popular messenger in the Linux world at the time.
